Adjust coordinate format.